fix: build vercel

--- a/package.json
+++ b/package.json
@@ -50,6 +50,10 @@
       "last 1 safari version"
     ]
   },
+  "resolutions": {
+    "@types/react": "17.0.14",
+    "@types/react-dom": "17.0.14"
+  },
   "devDependencies": {
     "@types/react-animate-on-scroll": "^2.1.5",
     "@types/react-google-recaptcha": "^2.1.2",
