fix: build vercel

--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     ]
   },
   "resolutions": {
-    "@types/react": "17.0.14",
-    "@types/react-dom": "17.0.14"
+    "@types/react": "^17.0.20",
+    "@types/react-dom": "^17.0.9"
   },
   "devDependencies": {
     "@types/react-animate-on-scroll": "^2.1.5",
