--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,11 +18,10 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "types": ["@types/babel__generator/index.d.ts"]
   },
   "include": [
     "src"
-  ],
-  "exclude": ["node_modules"]
+  ]
 }
