--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.2.4",
+    "@react-email/components": "0.3.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
@@ -15,6 +16,7 @@
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^17.0.2",
+    "react-email": "4.2.4",
     "react-google-recaptcha": "^2.1.0",
     "react-router-dom": "^6.2.1",
     "react-router-hash-link": "^2.4.3",
